--- a/usr/share/hardened-vm-kernel/build
+++ b/usr/share/hardened-vm-kernel/build
@@ -49,4 +49,4 @@ cp "${MYDIR}/kernel-config" "$source_folder/.config"
 ## Sanity test.
 diff "${MYDIR}/kernel-config" "$source_folder/.config"
 
-make deb-pkg -j $(nproc) -C "$source_folder"
+make deb-pkg -j "$(nproc)" -C "$source_folder"
