--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,6 @@ if:
 env:
   - TRAVIS_DEBIAN_DISTRIBUTION=Kicksecure
   - TRAVIS_DEBIAN_DISTRIBUTION=buster
+  - TRAVIS_DEBIAN_SECURITY_UPDATES=true
   - TRAVIS_DEBIAN_GIT_BUILDPACKAGE=./usr/share/hardened-vm-kernel/ci_test
+  - TRAVIS_DEBIAN_GIT_BUILDPACKAGE_OPTIONS=""
