--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ services:
   - docker
 
 script:
-  - wget -O- http://travis.debian.net/script.sh | sh -
+  #- wget -O- http://travis.debian.net/script.sh | sh -
+  - wget -O- https://raw.githubusercontent.com/adrelanos/travis.debian.net/gh-pages/script.sh | sh -
 
 if:
   tag IS blank
