--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,5 @@ env:
   - TRAVIS_DEBIAN_SECURITY_UPDATES=true
   - TRAVIS_DEBIAN_GIT_BUILDPACKAGE=./usr/share/hardened-vm-kernel/ci_test
   - TRAVIS_DEBIAN_GIT_BUILDPACKAGE_OPTIONS=" "
+  - TRAVIS_DEBIAN_NETWORK_ENABLED=true
+  - TRAVIS_DEBIAN_EXTRA_PACKAGES="lintian sudo"
