--- a/usr/share/hardened-vm-kernel/build
+++ b/usr/share/hardened-vm-kernel/build
@@ -20,7 +20,7 @@ else
 fi
 
 ## TODO: This probably has to be converted to debian/control 'Depends:'.
-$sudo_tool apt-get --no-install-recommends --yes install build-essential libssl-dev libncurses-dev fakeroot libelf-dev bison flex gcc-8-plugin-dev curl
+$sudo_tool apt-get --no-install-recommends --yes install build-essential libssl-dev libncurses-dev fakeroot libelf-dev bison flex gcc-8-plugin-dev curl bc kmod cpio
 
 version="4.19.91"
 
