--- a/usr/share/hardened-kernel/build
+++ b/usr/share/hardened-kernel/build
@@ -40,6 +40,7 @@ mkdir -p "$working_folder"
 
 curl_opts="--tlsv1.2 --proto =https --location --remote-name-all --remote-header-name"
 
+## TODO: do not use networking as per https://forums.whonix.org/t/kernel-recompilation-for-better-hardening/7598/214
 curl $curl_opts "${kernel_source}" -o "${working_folder}/linux-${version}.tar.xz"
 curl $curl_opts "${linux_hardened_patch}" -o "${working_folder}/linux-hardened-${version}.a.patch"
 
