--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,4 @@ env:
   - TRAVIS_DEBIAN_GIT_BUILDPACKAGE_OPTIONS=" "
   - TRAVIS_DEBIAN_NETWORK_ENABLED=true
   - TRAVIS_DEBIAN_EXTRA_PACKAGES="lintian sudo"
+  - TRAVIS_DEBIAN_TARGET_DIR=/root/kernel-build-result
