--- a/usr/share/hardened-kernel/build
+++ b/usr/share/hardened-kernel/build
@@ -49,19 +49,16 @@ version="4.19.93"
 kernel_config="hardened-vm-kernel"
 
 ## Location similar to DKMS.
-## DKMS uses /var/lib/dkms/lkrg/build/...
-working_folder="/var/lib/${kernel_config}/build"
+## DKMS uses /var/lib/dkms/lkrg/build/.
+working_folder="/var/lib/${kernel_config}"
+rm -r -f "$working_folder"
+mkdir -p "$working_folder"
+chmod o-rwx "$working_folder"
 
 source_folder="${working_folder}/linux-${version}/"
 
 kernel_source="https://cdn.kernel.org/pub/linux/kernel/v4.x/linux-${version}.tar.xz"
 linux_hardened_patch="https://github.com/anthraxx/linux-hardened/releases/download/${version}.a/linux-hardened-${version}.a.patch"
-
-## TODO: Wipe existing working_folder?
-
-## TODO: working_folder permissions
-
-mkdir -p "$working_folder"
 
 curl_opts="--tlsv1.2 --proto =https --location --remote-name-all --remote-header-name"
 
