--- a/usr/share/hardened-kernel/build
+++ b/usr/share/hardened-kernel/build
@@ -103,7 +103,7 @@ if [ "$debug" = "true" ]; then
    fi
 
    cat "${MYDIR}/debugging-config" >> "$source_folder/.config"
-   make olddefconfig
+   make olddefconfig -C "$source_folder"
 fi
 
 make deb-pkg -j "$(($(nproc) + 1))" -C "$source_folder"
