--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ env:
   - TRAVIS_DEBIAN_SECURITY_UPDATES=true
   - TRAVIS_DEBIAN_GIT_BUILDPACKAGE=./usr/share/hardened-kernel/ci_test
   - TRAVIS_DEBIAN_GIT_BUILDPACKAGE_OPTIONS=" "
+  #- TRAVIS_DEBIAN_AUTOPKGTEST=true
   - TRAVIS_DEBIAN_NETWORK_ENABLED=true
   - TRAVIS_DEBIAN_EXTRA_PACKAGES="lintian sudo"
   - TRAVIS_DEBIAN_TARGET_DIR=/home/travis/kernel-build-result
