--- a/usr/share/hardened-kernel/build
+++ b/usr/share/hardened-kernel/build
@@ -82,6 +82,10 @@ extracted_linux_kernel_sources_folder="${working_folder}/linux-${version}/"
 ls "$source_folder"
 ls "$working_folder"
 
+## Sanity tests.
+test -r "${source_folder}/linux-${version}.tar.xz"
+test -r "$extracted_linux_kernel_sources_folder"
+
 ## TODO: tar vs tar.xz
 tar -xf "${source_folder}/linux-${version}.tar.xz" -C "$working_folder"
 
