Sanity test. 'make oldconfig' should not modify '.config'."
https://forums.whonix.org/t/kernel-recompilation-for-better-hardening/7598/317

--- a/usr/share/hardened-kernel/build
+++ b/usr/share/hardened-kernel/build
@@ -56,6 +56,7 @@ MYDIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"
 ## Debugging.
 whoami
 env
+true "CI: $CI"
 
 ## TODO: do not use networking as per https://forums.whonix.org/t/kernel-recompilation-for-better-hardening/7598/214
 ## https://forums.whonix.org/t/kernel-recompilation-for-better-hardening/7598/267
@@ -108,6 +109,13 @@ if [ "$debug" = "true" ]; then
          echo "You have selected to not continue. Exiting."
          exit
       fi
+   fi
+
+   if [ "$CI" = "true" ]; then
+      true "Sanity test. 'make oldconfig' should not modify '.config'."
+      true "https://forums.whonix.org/t/kernel-recompilation-for-better-hardening/7598/317"
+      make oldconfig -C "$extracted_linux_kernel_sources_folder"
+      diff "${MYDIR}/${kernel_config}" "$extracted_linux_kernel_sources_folder/.config"
    fi
 
    cat "${MYDIR}/debugging-config" >> "$extracted_linux_kernel_sources_folder/.config"
