--- a/debian/control
+++ b/debian/control
@@ -1,10 +1,10 @@
-## Copyright (C) 2012 - 2020 ENCRYPTED SUPPORT LP <adrelanos@riseup.net>
+## Copyright (C) 2012 - 2021 ENCRYPTED SUPPORT LP <adrelanos@whonix.org>
 ## See the file COPYING for copying conditions.
 
 Source: hardened-kernel
 Section: misc
 Priority: optional
-Maintainer: Patrick Schleizer <adrelanos@riseup.net>
+Maintainer: Patrick Schleizer <adrelanos@whonix.org>
 ## From perspective of CI these are build dependencies.
 Build-Depends: debhelper (>= 12),
  libssl-dev, libncurses-dev, fakeroot,
