--- a/debian/control
+++ b/debian/control
@@ -6,13 +6,14 @@ Section: misc
 Priority: optional
 Maintainer: Patrick Schleizer <adrelanos@whonix.org>
 ## From perspective of CI these are build dependencies.
-Build-Depends: debhelper (>= 12),
+Build-Depends: debhelper (>= 13), debhelper-compat (= 13),
  libssl-dev, libncurses-dev, fakeroot,
  libelf-dev, bison, flex, gcc-8-plugin-dev, curl, bc, kmod, cpio
 Homepage: https://github.com/Whonix/hardened-kernel
 Vcs-Browser: https://github.com/Whonix/hardened-kernel
 Vcs-Git: https://github.com/Whonix/hardened-kernel.git
-Standards-Version: 4.3.0
+Standards-Version: 4.5.1
+Rules-Requires-Root: no
 
 Package: hardened-kernel
 Architecture: all
